Primer EDA Basico para Monza

--- a/primeraspruebas.ipynb
+++ b/primeraspruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bd3f4a92",
    "metadata": {},
    "outputs": [],
@@ -11,40 +11,20 @@
     "import torch.nn as nn\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e66901c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import fastf1 as ff1\n"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a006a32",
+   "id": "e66901c9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NotADirectoryError",
-     "evalue": "Cache directory does not exist! Please check for typos or create it first.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Habilitar caché en una carpeta del proyecto\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mff1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCache\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menable_cache\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../cache\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\Archivos\\UdeSA\\IngIA\\2025\\Machine Learning\\TpFinal-F1\\F1_Pini_Carruthers\\pytorch_cpu_env\\lib\\site-packages\\fastf1\\req.py:262\u001b[0m, in \u001b[0;36mCache.enable_cache\u001b[1;34m(cls, cache_dir, ignore_version, force_renew, use_requests_cache)\u001b[0m\n\u001b[0;32m    259\u001b[0m cache_dir \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexpanduser(cache_dir)\n\u001b[0;32m    261\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(cache_dir):\n\u001b[1;32m--> 262\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotADirectoryError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCache directory does not exist! Please \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    263\u001b[0m                              \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcheck for typos or create it first.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    264\u001b[0m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_CACHE_DIR \u001b[38;5;241m=\u001b[39m cache_dir\n\u001b[0;32m    265\u001b[0m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_IGNORE_VERSION \u001b[38;5;241m=\u001b[39m ignore_version\n",
-      "\u001b[1;31mNotADirectoryError\u001b[0m: Cache directory does not exist! Please check for typos or create it first."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Habilitar caché en una carpeta del proyecto\n",
+    "import fastf1 as ff1\n",
+    "\n",
+    "# Habilitar  caché en una carpeta del proyecto\n",
     "ff1.Cache.enable_cache(\"./cache\")"
    ]
   },
@@ -53,7 +33,7 @@
    "id": "d92b92f4",
    "metadata": {},
    "source": [
-    "Division de los Datos"
+    "1) Division de los Datos"
    ]
   },
   {
@@ -74,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "5d258471",
    "metadata": {},
    "outputs": [
@@ -82,7 +62,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "req         WARNING \tDEFAULT CACHE ENABLED! (24.0 KB) C:\\Users\\Lucas\\AppData\\Local\\Temp\\fastf1\n",
       "core           INFO \tLoading data for Italian Grand Prix - Race [v3.6.1]\n",
       "req            INFO \tNo cached data found for session_info. Loading data...\n",
       "_api           INFO \tFetching session info data...\n",
@@ -146,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "e096a031",
    "metadata": {},
    "outputs": [
@@ -226,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "cfddf45c",
    "metadata": {},
    "outputs": [],
@@ -255,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "cd9199cd",
    "metadata": {},
    "outputs": [
@@ -312,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "2bcd91c8",
    "metadata": {},
    "outputs": [
@@ -410,7 +389,7 @@
        "4        5.0    1.0   MEDIUM       5.0       True           1      17.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,6 +410,245 @@
     "\n",
     "X = col_laps[FEATURES_BASIC].copy()\n",
     "X.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57cd4ddc",
+   "metadata": {},
+   "source": [
+    "2) Primer Analisis Exploratorio de Datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1923667d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Columna de LapTime en segundos\n",
+    "col_laps = col_laps.copy()\n",
+    "col_laps[\"LapTime_s\"] = col_laps[\"LapTime\"].dt.total_seconds()\n",
+    "\n",
+    "# Por prolijidad, nos quedamos con un subconjunto de columnas relevantes para EDA\n",
+    "cols_eda = [\n",
+    "    \"LapNumber\", \"LapTime\", \"LapTime_s\",\n",
+    "    \"Stint\", \"Compound\", \"TyreLife\",\n",
+    "    \"TrackStatus\", \"Position\"\n",
+    "]\n",
+    "cols_eda = [c for c in cols_eda if c in col_laps.columns]\n",
+    "\n",
+    "col_laps[cols_eda].head()\n",
+    "col_laps[[\"LapTime_s\", \"TyreLife\"]].describe()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51f3be82",
+   "metadata": {},
+   "source": [
+    "Veamos una evolución del tiempo de vuelta a lo largo de la carrera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6edcda6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.plot(col_laps[\"LapNumber\"], col_laps[\"LapTime_s\"], marker=\"o\")\n",
+    "plt.xlabel(\"Número de vuelta\")\n",
+    "plt.ylabel(\"Tiempo de vuelta [s]\")\n",
+    "plt.title(\"Evolución del tiempo de vuelta - Colapinto (Monza 2025)\")\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d58f5214",
+   "metadata": {},
+   "source": [
+    "Histograma de tiempos de vuelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bbf6483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(6, 4))\n",
+    "plt.hist(col_laps[\"LapTime_s\"], bins=15, edgecolor=\"black\")\n",
+    "plt.xlabel(\"Tiempo de vuelta [s]\")\n",
+    "plt.ylabel(\"Frecuencia\")\n",
+    "plt.title(\"Distribución de tiempos de vuelta - Colapinto\")\n",
+    "plt.grid(axis=\"y\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70c57c98",
+   "metadata": {},
+   "source": [
+    "Tiempo de vuelta vs número de stint (cambio de neumáticos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f751211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"Stint\" in col_laps.columns:\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    for stint, df_stint in col_laps.groupby(\"Stint\"):\n",
+    "        plt.plot(df_stint[\"LapNumber\"], df_stint[\"LapTime_s\"],\n",
+    "                 marker=\"o\", linestyle=\"-\", label=f\"Stint {stint}\")\n",
+    "    plt.xlabel(\"Número de vuelta\")\n",
+    "    plt.ylabel(\"Tiempo de vuelta [s]\")\n",
+    "    plt.title(\"LapTime por stint - Colapinto\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c850be9",
+   "metadata": {},
+   "source": [
+    "Relación entre TyreLife y tiempo de vuelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b68b1406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"TyreLife\" in col_laps.columns and \"Compound\" in col_laps.columns:\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "\n",
+    "    compounds = col_laps[\"Compound\"].dropna().unique()\n",
+    "    for comp in compounds:\n",
+    "        df_c = col_laps[col_laps[\"Compound\"] == comp]\n",
+    "        plt.scatter(df_c[\"TyreLife\"], df_c[\"LapTime_s\"], alpha=0.7, label=comp)\n",
+    "\n",
+    "    plt.xlabel(\"TyreLife [vueltas]\")\n",
+    "    plt.ylabel(\"LapTime [s]\")\n",
+    "    plt.title(\"LapTime vs TyreLife por compuesto - Colapinto\")\n",
+    "    plt.legend(title=\"Compound\")\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4b57930",
+   "metadata": {},
+   "source": [
+    "Posición en carrera vs vuelta (race trace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6c32581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"Position\" in col_laps.columns:\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    plt.plot(col_laps[\"LapNumber\"], col_laps[\"Position\"], marker=\"o\")\n",
+    "    plt.xlabel(\"Número de vuelta\")\n",
+    "    plt.ylabel(\"Posición en carrera\")\n",
+    "    plt.title(\"Evolución de la posición - Colapinto\")\n",
+    "    plt.gca().invert_yaxis()  # posición 1 arriba, 20 abajo\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06e9a1bf",
+   "metadata": {},
+   "source": [
+    "TrackStatus vs LapNumber"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d2149d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"TrackStatus\" in col_laps.columns:\n",
+    "    # Mapeamos cada TrackStatus a un número\n",
+    "    status_codes = {st: i for i, st in enumerate(col_laps[\"TrackStatus\"].astype(str).unique())}\n",
+    "    col_laps[\"TrackStatus_code\"] = col_laps[\"TrackStatus\"].astype(str).map(status_codes)\n",
+    "\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "    plt.scatter(col_laps[\"LapNumber\"], col_laps[\"LapTime_s\"],\n",
+    "                c=col_laps[\"TrackStatus_code\"], cmap=\"tab10\")\n",
+    "    cbar = plt.colorbar()\n",
+    "    cbar.set_ticks(list(status_codes.values()))\n",
+    "    cbar.set_ticklabels(list(status_codes.keys()))\n",
+    "    plt.xlabel(\"Número de vuelta\")\n",
+    "    plt.ylabel(\"LapTime [s]\")\n",
+    "    plt.title(\"LapTime coloreado por TrackStatus\")\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5043cb27",
+   "metadata": {},
+   "source": [
+    "PROXIMOS PASOS:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25f6f842",
+   "metadata": {},
+   "source": [
+    "- Detectar outliers de LapTime (vueltas raras que quizás conviene sacar).\n",
+    "\n",
+    "- Entender cómo influye el neumático y su vida en el tiempo de vuelta.\n",
+    "\n",
+    "- Ver si el ritmo cambia mucho entre stints.\n",
+    "\n",
+    "- Ver la historia de la carrera de Colapinto (posición, laps bajo SC, etc.)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "355ee873",
+   "metadata": {},
+   "source": [
+    "PARA PENSAR:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf5f5d29",
+   "metadata": {},
+   "source": [
+    "- Que otras formas de armar el set de train podemos usar? (Carrera+FP1+FP2+FP3 / Solo Carrera / Usar solo Carrera pero usar todos los Circuitos del calendario / Usar todo de todo)\n",
+    "\n",
+    "- Que modelos vamos a usar?"
    ]
   }
  ],
