--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -759,9 +759,123 @@
    "id": "6225f9ea",
    "metadata": {},
    "source": [
-    "Tus tiempos están en el rango ~76–81 s, así que el error típico es ~1–1.5% del tiempo de vuelta.\n",
+    "- Mis tiempos están en el rango ~76–81 s, así que el error típico es ~1–1.5% del tiempo de vuelta.\n",
     "\n",
-    "Para “feeling racing”: 1 s por vuelta es mucho para comparar compuestos/estrategias finas (diferencias de 0.2–0.4 s), pero como primer baseline no está mal para haber usado solo features “legales” y un único piloto en un solo circuito."
+    "- Para “feeling racing”: 1 s por vuelta es mucho para comparar compuestos/estrategias finas (diferencias de 0.2–0.4 s), pero como primer baseline no está mal para haber usado solo features “legales” y un único piloto en un solo circuito."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22862694",
+   "metadata": {},
+   "source": [
+    "R² ≈ 0.29"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed256717",
+   "metadata": {},
+   "source": [
+    "- El modelo explica un ~29% de la variabilidad de los tiempos respecto a predecir siempre la media.\n",
+    "\n",
+    "- Traducción: captura algo de estructura, pero todavía gran parte de la variación de LapTime viene de cosas que no estamos modelando (tráfico, errores de manejo, ritmo de ahorro, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aea7138",
+   "metadata": {},
+   "source": [
+    "Los Graficos cuentan lo siguiente:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3cb8c15",
+   "metadata": {},
+   "source": [
+    "En Y_TRUE vs Y_PRED:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e49720f5",
+   "metadata": {},
+   "source": [
+    "Los puntos siguen la diagonal, pero bastante “aplastados”:\n",
+    "\n",
+    "Las vueltas más rápidas (y_true bajo) tienden a quedar un poco por arriba de la diagonal → el modelo las predice algo más lentas de lo que son.\n",
+    "\n",
+    "Las vueltas más lentas (y_true alto) tienden a quedar por debajo de la diagonal → el modelo las predice más rápidas de lo real.\n",
+    "\n",
+    "Eso es típico de un modelo que “tira hacia el promedio”: comprime el rango y no termina de capturar bien los extremos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe11a6a4",
+   "metadata": {},
+   "source": [
+    "En el Histograma de Residuos (Y_TRUE − Y_PRED):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6e1ce57",
+   "metadata": {},
+   "source": [
+    "Hay una concentración alrededor de 0 s (bien, errores chicos).\n",
+    "\n",
+    "Pero aparece un segundo “bulto” de residuos positivos alrededor de ~1.5–2 s, y algunos casos extremos ~3 s:\n",
+    "\n",
+    "Residuo positivo = y_true > y_pred → el modelo subestima el tiempo (cree que la vuelta va a ser mucho más rápida de lo que fue).\n",
+    "\n",
+    "Eso sugiere que hay subconjuntos de vueltas “especiales” (tráfico, errores, gestión fuerte de neumático/combustible) donde nuestras features no tienen manera de saber que el piloto va a ir tan lento → ruido irreducible para este setup."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dba7007",
+   "metadata": {},
+   "source": [
+    "CONCLUSIÓN DEL PRIMER MODELO:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "442f1424",
+   "metadata": {},
+   "source": [
+    "Coherente:\n",
+    "- Predice en el orden correcto (cuando una vuelta es más rápida/lenta que otra suele reflejarlo).\n",
+    "- El error medio ~1 s no es descabellado para un primer tiro con pocas features y poco dato.\n",
+    "\n",
+    "Limitado para estrategia fina:\n",
+    "- Con este error, diferencias chicas de estrategia (0.2–0.4 s por vuelta) quedan escondidas en el ruido.\n",
+    "- R² bajo indica que la mayor parte de la variación de LapTime no está explicada solo por LapNumber, Stint, TyreLife, Position, Session, Compound."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d9157e4",
+   "metadata": {},
+   "source": [
+    "OPCIONES A SEGUIR:\n",
+    "\n",
+    "Analizar los grandes errores:\n",
+    "- Mirar esas vueltas con residuo > ~2 s y ver si se concentran en:\n",
+    "- cierto stint,\n",
+    "- cierto compuesto,\n",
+    "- momentos con tráfico/lock-ups (si tenés alguna pista).\n",
+    "\n",
+    "Más features:\n",
+    "- Alguna medida de “fase de carrera” más explícita (por ejemplo lap_norm = LapNumber / max_laps).\n",
+    "- Features agregadas de vueltas anteriores (media de las últimas N vueltas, mejor vuelta previa, etc.).\n",
+    "\n",
+    "Más datos\n",
+    "- Sumar los datos de Gasly de Mónaco (Mismo auto pero distinto piloto)\n",
+    "\n"
    ]
   }
  ],
