Limpieza de NaNs y sumo Varios modelos mas.

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "id": "a0516d62",
    "metadata": {},
    "outputs": [],
@@ -25,12 +25,13 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import KFold"
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.base import clone"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "id": "16d50a52",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
     "y = df[\"LapTime_s\"].to_numpy()\n",
     "\n",
     "# Features legales\n",
-    "LEGAL_FEATURES_NUM = [\"LapNumber\", \"Stint\", \"TyreLife\", \"Position\"]\n",
+    "LEGAL_FEATURES_NUM = [\"LapNumber\", \"Stint\", \"TyreLife\"]\n",
     "LEGAL_FEATURES_CAT = [\"Session\", \"Compound\"]\n",
     "\n",
     "LEGAL_FEATURES_NUM = [c for c in LEGAL_FEATURES_NUM if c in df.columns]\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "id": "b9d1e4db",
    "metadata": {},
    "outputs": [],
@@ -63,18 +64,136 @@
     "        (\"num\", StandardScaler(), LEGAL_FEATURES_NUM),\n",
     "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), LEGAL_FEATURES_CAT),\n",
     "    ]\n",
-    ")\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a353256e",
+   "metadata": {},
+   "source": [
+    "Analisis de NaNs en los datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "14038bee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>missing_count</th>\n",
+       "      <th>missing_%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LapNumber</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stint</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TyreLife</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Session</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Compound</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           missing_count  missing_%\n",
+       "LapNumber              0        0.0\n",
+       "Stint                  0        0.0\n",
+       "TyreLife               0        0.0\n",
+       "Session                0        0.0\n",
+       "Compound               0        0.0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FEATURES = LEGAL_FEATURES_NUM + LEGAL_FEATURES_CAT\n",
     "\n",
-    "rf = RandomForestRegressor(\n",
-    "    n_estimators=300,\n",
-    "    random_state=42,\n",
-    "    n_jobs=-1\n",
-    ")\n",
+    "missing_counts = df[FEATURES].isna().sum()\n",
+    "missing_percent = df[FEATURES].isna().mean() * 100\n",
     "\n",
-    "model = Pipeline(steps=[\n",
-    "    (\"preprocess\", preprocessor),\n",
-    "    (\"regressor\", rf),\n",
-    "])\n"
+    "na_summary = pd.DataFrame({\n",
+    "    \"missing_count\": missing_counts,\n",
+    "    \"missing_%\": missing_percent.round(2)\n",
+    "}).sort_values(\"missing_%\", ascending=False)\n",
+    "\n",
+    "na_summary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "9701dc0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in FEATURES:\n",
+    "    na_mask = df[col].isna()\n",
+    "    if na_mask.any():\n",
+    "        print(f\"\\nColumna: {col}\")\n",
+    "        print(df.loc[na_mask, \"Session\"].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e9fe91a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_context = [\"Session\", \"LapNumber\", \"Stint\", \"Compound\", \"TyreLife\", \"Position\"]\n",
+    "\n",
+    "for col in FEATURES:\n",
+    "    na_mask = df[col].isna()\n",
+    "    if na_mask.any():\n",
+    "        print(f\"\\n=== Ejemplos de filas con NaN en {col} ===\")\n",
+    "        display(df.loc[na_mask, cols_context].head(10))\n",
+    "    else:\n",
+    "        print(f\"\\nNo hay NaN en la columna {col}\")\n"
    ]
   },
   {
@@ -87,58 +206,328 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "e2048b68",
+   "execution_count": 77,
+   "id": "76dbec1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model_cv(name, regressor, X, y, n_splits=5, random_state=42):\n",
+    "    \"\"\"\n",
+    "    Entrena y evalúa un modelo de regresión usando KFold CV.\n",
+    "    Devuelve un dict con métricas promedio.\n",
+    "    \"\"\"\n",
+    "    kf = KFold(n_splits=n_splits, shuffle=True, random_state=random_state)\n",
+    "    \n",
+    "    mae_scores = []\n",
+    "    rmse_scores = []\n",
+    "    r2_scores = []\n",
+    "    \n",
+    "    for fold, (train_idx, test_idx) in enumerate(kf.split(X), start=1):\n",
+    "        X_train = X.iloc[train_idx]\n",
+    "        X_test  = X.iloc[test_idx]\n",
+    "        y_train = y[train_idx]\n",
+    "        y_test  = y[test_idx]\n",
+    "        \n",
+    "        # Nuevo pipeline para este fold\n",
+    "        reg = clone(regressor)\n",
+    "        model = Pipeline(steps=[\n",
+    "            (\"preprocess\", preprocessor),\n",
+    "            (\"regressor\", reg),\n",
+    "        ])\n",
+    "        \n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        \n",
+    "        mae = metrics.MAE(y_test, y_pred)\n",
+    "        rmse = metrics.RMSE(y_test, y_pred)\n",
+    "        r2 = metrics.R2(y_test, y_pred)\n",
+    "        \n",
+    "        mae_scores.append(mae)\n",
+    "        rmse_scores.append(rmse)\n",
+    "        r2_scores.append(r2)\n",
+    "        \n",
+    "        print(f\"[{name}] Fold {fold}: MAE={mae:.3f}, RMSE={rmse:.3f}, R2={r2:.3f}\")\n",
+    "    \n",
+    "    mae_mean, mae_std = np.mean(mae_scores), np.std(mae_scores)\n",
+    "    rmse_mean, rmse_std = np.mean(rmse_scores), np.std(rmse_scores)\n",
+    "    r2_mean, r2_std = np.mean(r2_scores), np.std(r2_scores)\n",
+    "    \n",
+    "    print(f\"\\n[{name}] === Promedio {n_splits} folds ===\")\n",
+    "    print(f\"MAE  medio: {mae_mean:.3f} ± {mae_std:.3f}\")\n",
+    "    print(f\"RMSE medio: {rmse_mean:.3f} ± {rmse_std:.3f}\")\n",
+    "    print(f\"R2   medio: {r2_mean:.3f} ± {r2_std:.3f}\\n\")\n",
+    "    \n",
+    "    return {\n",
+    "        \"model\": name,\n",
+    "        \"MAE_mean\": mae_mean,\n",
+    "        \"MAE_std\": mae_std,\n",
+    "        \"RMSE_mean\": rmse_mean,\n",
+    "        \"RMSE_std\": rmse_std,\n",
+    "        \"R2_mean\": r2_mean,\n",
+    "        \"R2_std\": r2_std,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "96496dab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "\n",
+    "models = {\n",
+    "    \"RandomForest\": RandomForestRegressor(\n",
+    "        n_estimators=300,\n",
+    "        random_state=42,\n",
+    "        n_jobs=-1\n",
+    "    ),\n",
+    "    \"GradientBoosting\": GradientBoostingRegressor(\n",
+    "        n_estimators=300,\n",
+    "        learning_rate=0.05,\n",
+    "        max_depth=3,\n",
+    "        random_state=42\n",
+    "    ),\n",
+    "    \"Ridge\": Ridge(alpha=1.0, random_state=42),\n",
+    "    \"MLP\": MLPRegressor(\n",
+    "        hidden_layer_sizes=(64, 32),\n",
+    "        activation=\"relu\",\n",
+    "        solver=\"adam\",\n",
+    "        learning_rate_init=1e-3,\n",
+    "        max_iter=500,\n",
+    "        random_state=42\n",
+    "    ),\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "08e40a95",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1: MAE=0.946, RMSE=1.366, R2=0.647\n",
-      "Fold 2: MAE=0.532, RMSE=0.849, R2=0.885\n",
-      "Fold 3: MAE=0.771, RMSE=1.050, R2=0.808\n",
-      "Fold 4: MAE=0.890, RMSE=1.318, R2=0.553\n",
-      "Fold 5: MAE=0.580, RMSE=0.726, R2=0.817\n",
+      "[RandomForest] Fold 1: MAE=0.936, RMSE=1.346, R2=0.657\n",
+      "[RandomForest] Fold 2: MAE=0.386, RMSE=0.466, R2=0.965\n",
+      "[RandomForest] Fold 3: MAE=0.718, RMSE=1.009, R2=0.823\n",
+      "[RandomForest] Fold 4: MAE=0.954, RMSE=1.353, R2=0.529\n",
+      "[RandomForest] Fold 5: MAE=0.557, RMSE=0.709, R2=0.825\n",
       "\n",
-      "=== Resultados promedio CV (5 folds) ===\n",
-      "MAE  medio: 0.744 ± 0.164\n",
-      "RMSE medio: 1.062 ± 0.251\n",
-      "R2   medio: 0.741958283297933673949842159345280 ± 0.123\n"
+      "[RandomForest] === Promedio 5 folds ===\n",
+      "MAE  medio: 0.710 ± 0.219\n",
+      "RMSE medio: 0.977 ± 0.350\n",
+      "R2   medio: 0.760 ± 0.151\n",
+      "\n",
+      "[GradientBoosting] Fold 1: MAE=0.955, RMSE=1.306, R2=0.677\n",
+      "[GradientBoosting] Fold 2: MAE=0.370, RMSE=0.461, R2=0.966\n",
+      "[GradientBoosting] Fold 3: MAE=0.713, RMSE=0.990, R2=0.829\n",
+      "[GradientBoosting] Fold 4: MAE=0.983, RMSE=1.366, R2=0.520\n",
+      "[GradientBoosting] Fold 5: MAE=0.501, RMSE=0.621, R2=0.866\n",
+      "\n",
+      "[GradientBoosting] === Promedio 5 folds ===\n",
+      "MAE  medio: 0.704 ± 0.242\n",
+      "RMSE medio: 0.949 ± 0.360\n",
+      "R2   medio: 0.772 ± 0.156\n",
+      "\n",
+      "[Ridge] Fold 1: MAE=1.074, RMSE=1.360, R2=0.650\n",
+      "[Ridge] Fold 2: MAE=0.752, RMSE=0.979, R2=0.847\n",
+      "[Ridge] Fold 3: MAE=1.048, RMSE=1.300, R2=0.706\n",
+      "[Ridge] Fold 4: MAE=1.259, RMSE=1.622, R2=0.324\n",
+      "[Ridge] Fold 5: MAE=0.742, RMSE=1.091, R2=0.586\n",
+      "\n",
+      "[Ridge] === Promedio 5 folds ===\n",
+      "MAE  medio: 0.975 ± 0.200\n",
+      "RMSE medio: 1.270 ± 0.223\n",
+      "R2   medio: 0.623 ± 0.173\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Archivos\\UdeSA\\IngIA\\2025\\Machine Learning\\TpFinal-F1\\F1_Pini_Carruthers\\pytorch_cpu_env\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MLP] Fold 1: MAE=3.561, RMSE=4.241, R2=-2.405\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Archivos\\UdeSA\\IngIA\\2025\\Machine Learning\\TpFinal-F1\\F1_Pini_Carruthers\\pytorch_cpu_env\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MLP] Fold 2: MAE=2.457, RMSE=3.047, R2=-0.480\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Archivos\\UdeSA\\IngIA\\2025\\Machine Learning\\TpFinal-F1\\F1_Pini_Carruthers\\pytorch_cpu_env\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MLP] Fold 3: MAE=2.102, RMSE=2.919, R2=-0.482\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Archivos\\UdeSA\\IngIA\\2025\\Machine Learning\\TpFinal-F1\\F1_Pini_Carruthers\\pytorch_cpu_env\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MLP] Fold 4: MAE=3.689, RMSE=4.472, R2=-4.143\n",
+      "[MLP] Fold 5: MAE=2.690, RMSE=3.153, R2=-2.457\n",
+      "\n",
+      "[MLP] === Promedio 5 folds ===\n",
+      "MAE  medio: 2.900 ± 0.622\n",
+      "RMSE medio: 3.566 ± 0.653\n",
+      "R2   medio: -1.993 ± 1.384\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Archivos\\UdeSA\\IngIA\\2025\\Machine Learning\\TpFinal-F1\\F1_Pini_Carruthers\\pytorch_cpu_env\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>MAE_mean</th>\n",
+       "      <th>MAE_std</th>\n",
+       "      <th>RMSE_mean</th>\n",
+       "      <th>RMSE_std</th>\n",
+       "      <th>R2_mean</th>\n",
+       "      <th>R2_std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.710093</td>\n",
+       "      <td>0.218863</td>\n",
+       "      <td>0.976712</td>\n",
+       "      <td>0.349585</td>\n",
+       "      <td>0.759938</td>\n",
+       "      <td>0.151176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GradientBoosting</td>\n",
+       "      <td>0.704468</td>\n",
+       "      <td>0.242255</td>\n",
+       "      <td>0.949001</td>\n",
+       "      <td>0.360163</td>\n",
+       "      <td>0.771717</td>\n",
+       "      <td>0.156358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ridge</td>\n",
+       "      <td>0.974944</td>\n",
+       "      <td>0.200098</td>\n",
+       "      <td>1.270406</td>\n",
+       "      <td>0.223421</td>\n",
+       "      <td>0.622526</td>\n",
+       "      <td>0.172634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MLP</td>\n",
+       "      <td>2.899803</td>\n",
+       "      <td>0.622210</td>\n",
+       "      <td>3.566432</td>\n",
+       "      <td>0.653400</td>\n",
+       "      <td>-1.993208</td>\n",
+       "      <td>1.384126</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              model  MAE_mean   MAE_std  RMSE_mean  RMSE_std   R2_mean  \\\n",
+       "0      RandomForest  0.710093  0.218863   0.976712  0.349585  0.759938   \n",
+       "1  GradientBoosting  0.704468  0.242255   0.949001  0.360163  0.771717   \n",
+       "2             Ridge  0.974944  0.200098   1.270406  0.223421  0.622526   \n",
+       "3               MLP  2.899803  0.622210   3.566432  0.653400 -1.993208   \n",
+       "\n",
+       "     R2_std  \n",
+       "0  0.151176  \n",
+       "1  0.156358  \n",
+       "2  0.172634  \n",
+       "3  1.384126  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "import pandas as pd\n",
     "\n",
-    "mae_scores = []\n",
-    "rmse_scores = []\n",
-    "r2_scores = []\n",
+    "results = []\n",
     "\n",
-    "for fold, (train_idx, test_idx) in enumerate(kf.split(X), start=1):\n",
-    "    X_train_fold = X.iloc[train_idx]\n",
-    "    X_test_fold  = X.iloc[test_idx]\n",
-    "    y_train_fold = y[train_idx]\n",
-    "    y_test_fold  = y[test_idx]\n",
-    "    \n",
-    "    # entrenar modelo en este fold\n",
-    "    model.fit(X_train_fold, y_train_fold)\n",
-    "    y_pred_fold = model.predict(X_test_fold)\n",
-    "    \n",
-    "    mae = metrics.MAE(y_test_fold, y_pred_fold)\n",
-    "    rmse = metrics.RMSE(y_test_fold, y_pred_fold)\n",
-    "    r2 = metrics.R2(y_test_fold, y_pred_fold)\n",
-    "    \n",
-    "    mae_scores.append(mae)\n",
-    "    rmse_scores.append(rmse)\n",
-    "    r2_scores.append(r2)\n",
-    "    \n",
-    "    print(f\"Fold {fold}: MAE={mae:.3f}, RMSE={rmse:.3f}, R2={r2:.3f}\")\n",
+    "for name, reg in models.items():\n",
+    "    res = evaluate_model_cv(name, reg, X, y, n_splits=5, random_state=42)\n",
+    "    results.append(res)\n",
     "\n",
-    "print(\"\\n=== Resultados promedio CV (5 folds) ===\")\n",
-    "print(f\"MAE  medio: {np.mean(mae_scores):.3f} ± {np.std(mae_scores):.3f}\")\n",
-    "print(f\"RMSE medio: {np.mean(rmse_scores):.3f} ± {np.std(rmse_scores):.3f}\")\n",
-    "print(f\"R2   medio: {np.mean(r2_scores):.33f} ± {np.std(r2_scores):.3f}\")\n"
+    "results_df = pd.DataFrame(results)\n",
+    "results_df\n"
    ]
   },
   {
